# mailapp

./: .gitignore  README.md  email_config.db  pyproject.toml
.github/workflows/: python-package.yml
src/: main.py
src/mailapp/: __about__.py  __init__.py  __main__.py  app.py  mail.py
src/mailapp/widgets/: __init__.py  compact_email.py  email_list.py  sidebar.py
src/tests/: test_email.py
tests/: test_email.py
