[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[project]
name = "mailapp"
authors = [
  { name="avycado13", email="gchundi@gmail.com" },
]
description = "A small email client"
readme = "README.md"
requires-python = ">=3.8"
version = "1.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/avycado13/mailapp"
Issues = "https://github.com/avycado13/mailapp/issues"

[tool.hatch.dependencies]
python = "^3.9"
sqlalchemy = "^1.4.23"
cryptography = "^3.4.8"
gnupg = "^2.3.1"
email-validator = "^1.1.3"
getpass = "^0.2.2"
imaplib = "^0.1.3"
smtplib = "^0.1.1"

[tool.hatch.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.5.7"


[tool.hatch.scripts]
my_package_cli = 'mailapp.mail:run'
