[project]
name = "mailapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "cryptography>=44.0.0",
    "gnupg>=2.3.1",
    "sqlalchemy>=2.0.36",
]

[project.scripts]
mailapp = "mailapp:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
