[project]
name = "mailapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avycado13", email = "108358183+avycado13@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=6.8.0",
]

[project.scripts]
mailapp = "mailapp:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "textual-dev>=1.8.0",
]
